# taskchampion-swift

./: .gitignore  LICENSE  README.md
taskchampion-swift/: Task.swift  module.modulemap  taskchampion_swift.h
taskchampion-swift.xcodeproj/: project.pbxproj
taskchampion-swift/taskchampion_swift.docc/: taskchampion_swift.md
taskchampion-swiftTests/: taskchampion_swiftTests.swift
tc-swiftbridge/: .gitignore  Cargo.toml  build-rust.sh  build.rs
tc-swiftbridge/src/: lib.rs  task.rs
